--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@terraclassic-community/terra.js",
-  "version": "3.1.10",
+  "name": "@classic-terra/terra.js",
+  "version": "3.1.11",
   "description": "The JavaScript SDK for Terra",
   "license": "MIT",
   "author": "Terra Classic Community",
@@ -25,13 +25,13 @@
     "dist"
   ],
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
   },
   "scripts": {
     "build": "tsc --module commonjs && webpack --mode production",
     "test": "jest --runInBand",
-    "format": "prettier --check ./src/**/*.ts",
-    "format:fix": "prettier --write ./src/**/*.ts",
+    "format": "prettier --check \"{,!(node_modules),!(dist)/**/}*.ts\"",
+    "format:fix": "prettier --write \"{,!(node_modules),!(dist)/**/}*.ts\"",
     "lint": "eslint src --ext .js,.ts",
     "lint:fix": "eslint src --ext .js,.ts --fix",
     "doc": "typedoc",
@@ -43,12 +43,6 @@
       "npm run format:fix"
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "post-checkout": "npm i"
-    }
-  },
   "prettier": {
     "semi": true,
     "singleQuote": true,
@@ -59,46 +53,48 @@
     "access": "public"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.11.7",
-    "@types/readable-stream": "^2.3.9",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^18.19.41",
+    "@types/readable-stream": "^4.0.15",
     "@types/secp256k1": "^4.0.1",
     "@types/tmp": "^0.2.0",
     "@types/ws": "^7.4.7",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
     "buffer": "^6.0.3",
-    "eslint": "^8.2.0",
-    "husky": "^4.3.6",
-    "jest": "^27.4.7",
+    "eslint": "^8.57.0",
+    "husky": "^9.1.1",
+    "jest": "^29.7.0",
     "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1",
+    "prettier": "^2.8.8",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^29.2.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "typedoc": "^0.22.11",
-    "typescript": "^4.5.5",
+    "typedoc": "^0.26.4",
+    "typescript": "^5.5.3",
     "webpack": "^5.11.1",
     "webpack-bundle-analyzer": "^4.3.0",
-    "webpack-cli": "^4.3.0"
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "@classic-terra/terra.proto": "^1.1.0",
+    "@classic-terra/terra.proto": "^2.1.2",
     "@terra-money/terra.proto": "^2.1.0",
     "axios": "^1.6.4",
     "bech32": "^2.0.0",
     "bip32": "^2.0.6",
     "bip39": "^3.0.3",
-    "bufferutil": "^4.0.3",
     "decimal.js": "^10.2.1",
     "jscrypto": "^1.0.1",
     "readable-stream": "^3.6.0",
     "secp256k1": "^4.0.2",
     "tmp": "^0.2.1",
-    "utf-8-validate": "^5.0.5",
-    "ws": "^7.5.9"
+    "ws": "^7.5.10"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.8",
+    "utf-8-validate": "^5.0.10"
   }
 }
